--- a/web/.htaccess
+++ b/web/.htaccess
@@ -1,6 +1,4 @@
-RewriteEngine On RewriteBase /
-
-RewriteCond %{REQUEST_FILENAME} !-f
+RewriteEngine on
 RewriteCond %{REQUEST_FILENAME} !-d
-
-RewriteRule . index.php
+RewriteCond %{REQUEST_FILENAME} !-f
+RewriteRule . index.php [L]
