--- a/composer.json
+++ b/composer.json
@@ -17,10 +17,7 @@
         "php": ">=5.6.0",
         "yiisoft/yii2": "~2.0.14",
         "yiisoft/yii2-bootstrap4": "~2.0.0",
-        "yiisoft/yii2-swiftmailer": "~2.0.0 || ~2.1.0",
-	    "ext-gd": "*",
-        "ext-imagick": "*",
-        "yiisoft/yii2-imagine": "~2.2.0"
+        "yiisoft/yii2-swiftmailer": "~2.0.0 || ~2.1.0"
     },
     "require-dev": {
         "yiisoft/yii2-debug": "~2.1.0",
@@ -45,7 +42,8 @@
     },
     "scripts": {
         "post-install-cmd": [
-            "yii\\composer\\Installer::postInstall"
+            "yii\\composer\\Installer::postInstall",
+            "composer require kartik-v/yii2-widget-select2 '@dev'"
         ],
         "post-create-project-cmd": [
             "yii\\composer\\Installer::postCreateProject",
