--- a/composer.json
+++ b/composer.json
@@ -43,12 +43,12 @@
     },
     "scripts": {
         "post-install-cmd": [
-            "rm composer.lock",
             "yii\\composer\\Installer::postInstall"
         ],
         "post-create-project-cmd": [
             "yii\\composer\\Installer::postCreateProject",
-            "yii\\composer\\Installer::postInstall"
+            "yii\\composer\\Installer::postInstall",
+            "composer update --lock"
         ]
     },
     "extra": {
