--- a/composer.json
+++ b/composer.json
@@ -44,7 +44,7 @@
     "scripts": {
         "post-install-cmd": [
             "yii\\composer\\Installer::postInstall",
-            "composer update --lock"
+            "php composer.phar update --lock"
         ],
         "post-create-project-cmd": [
             "yii\\composer\\Installer::postCreateProject",
