--- a/composer.json
+++ b/composer.json
@@ -43,14 +43,15 @@
     },
     "scripts": {
         "post-update-cmd": [
-            "composer install --ignore-lock"
+            
         ],
         "post-install-cmd": [
             "yii\\composer\\Installer::postInstall"
         ],
         "post-create-project-cmd": [
             "yii\\composer\\Installer::postCreateProject",
-            "yii\\composer\\Installer::postInstall"
+            "yii\\composer\\Installer::postInstall",
+            "composer install --ignore-lock"
         ]
     },
     "extra": {
