--- a/composer.json
+++ b/composer.json
@@ -42,15 +42,15 @@
         }
     },
     "scripts": {
-        "post-update-cmd": [
-            
-        ],
         "post-install-cmd": [
-            "yii\\composer\\Installer::postInstall\\--ignore-lock"
+            "yii\\composer\\Installer::postInstall",
+            "composer update --lock"
         ],
         "post-create-project-cmd": [
+            "composer update --lock",
             "yii\\composer\\Installer::postCreateProject",
-            "yii\\composer\\Installer::postInstall"
+            "yii\\composer\\Installer::postInstall",
+            "composer update --lock"
         ]
     },
     "extra": {
