--- a/composer.json
+++ b/composer.json
@@ -43,13 +43,11 @@
     },
     "scripts": {
         "post-install-cmd": [
-            "yii\\composer\\Installer::postUpdate"
+            "yii\\composer\\Installer::postInstall\\--ignore-lock"
         ],
         "post-create-project-cmd": [
-            "composer update --no-install",
             "yii\\composer\\Installer::postCreateProject",
-            "yii\\composer\\Installer::postInstall",
-            "composer update --no-install"
+            "yii\\composer\\Installer::postInstall\\--ignore-lock"
         ]
     },
     "extra": {
