--- a/composer.json
+++ b/composer.json
@@ -17,10 +17,11 @@
         "php": ">=5.6.0",
         "yiisoft/yii2": "~2.0.14",
         "yiisoft/yii2-bootstrap4": "~2.0.0",
-        "yiisoft/yii2-swiftmailer": "~2.0.0 || ~2.1.0",
-        "phpoffice/phpspreadsheet": "^1.23"
+        "yiisoft/yii2-swiftmailer": "~2.0.0 || ~2.1.0"
+        
     },
     "require-dev": {
+        "phpoffice/phpspreadsheet": "^1.23",
         "yiisoft/yii2-debug": "~2.1.0",
         "yiisoft/yii2-gii": "~2.1.0",
         "yiisoft/yii2-faker": "~2.0.0",
@@ -47,7 +48,6 @@
             
         ],
         "post-create-project-cmd": [
-            "sudo composer self-update",
             "yii\\composer\\Installer::postCreateProject",
             "yii\\composer\\Installer::postInstall"
         ],
