--- a/composer.json
+++ b/composer.json
@@ -61,7 +61,8 @@
                 {
                     "runtime": "0777",
                     "web/assets": "0777",
-                    "yii": "0755"
+                    "yii": "0755",
+                    "tmp": "0777"
                 }
             ]
         },
