--- a/.env.example
+++ b/.env.example
@@ -1,12 +1,14 @@
 # Configuração das variaveis de desenvolvimento
 # Create 3 files > .env | .env.prod | .env.dev
 
-ENVIRONMENT=
-HOST=
-DB_USERNAME=
-DB_PASSWORD=
-DB_DATABASE=
-DB_HOST=
-DB_PORT=
-DB_DIALECT=
-DB_DRIVER=
+ENVIRONMENT=DEV
+HOST=172.17.0.1
+ID_CONFIG=ImOVOLTGWYbJoE18NT00cBYc*NsbmZ6Emj7jNMDffqZZeommiuE
+COOKIE_VALIDATION_KEY=D2*D4TfzmnS018QjRw3i90mDqp82FhZViHAxLp2zQDjKkK8inJd
+DB_HOST=172.17.0.1
+DB_USERNAME=root
+DB_PASSWORD=Password
+DB_DATABASE=mybasicyii2
+DB_DIALECT=mysql
+DB_DRIVER=mysql
+DB_PORT=3306
