--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,9 +8,9 @@ services:
     image: mysql:5.7
     command: --character-set-server=utf8 --collation-server=utf8_general_ci
     ports:
-      -"3306:3306"
+      - "3306:3306"
     volumes:
-      -db_data:/var/lib/mysql
+      - db_data:/var/lib/mysql
     environment:
       MYSQL_ROOT_PASSWORD: "Password"
       MYSQL_DATABASE: "mybasicyii2"
@@ -18,18 +18,18 @@ services:
       - minha-rede
 
   phpmyadmin:
-   restart: always
-   container_name: phpmyadmin-container
-   image: phpmyadmin/phpmyadmin
-  environment:
-    MYSQL_ROOT_PASSWORD: "Password"
-    MYSQL DATABASE: "mybasicyii2"
+    restart: always
+    container_name: phpmyadmin-container
+    image: phpmyadmin/phpmyadmin
+    environment:
+      MYSQL_ROOT_PASSWORD: "Password"
+      MYSQL DATABASE: "mybasicyii2"
     ports:
-      - "9999:80"
+    - "9999:80"
     networks:
-      - minha-rede
+    - minha-rede
     depends_on:
-      - db
+    - db
 
   web:
     restart: always
@@ -41,7 +41,7 @@ services:
     env_file:
       - .env.local
     environment:
-      - EXAMPLE: "value"
+      EXAMPLE: "value_example"
     ports:
       - "8888:80"
     depends_on:
@@ -67,9 +67,9 @@ services:
 #     depends_on:
 #       - web
 
-# networks:
-#   minha-rede:
-#     driver: bridge
+networks:
+  minha-rede:
+    driver: bridge
 
-# volumes:
-#   db_data:
+volumes:
+  db_data:
