--- a/composer.json
+++ b/composer.json
@@ -19,6 +19,8 @@
         "yiisoft/yii2-bootstrap4": "~2.0.0",
         "yiisoft/yii2-swiftmailer": "~2.0.0 || ~2.1.0",
         "phpoffice/phpspreadsheet": "^1.23",
+        "kartik-v/yii2-widgets": "dev-master",
+        "yiisoft/yii2-imagine": "~2.2.0",
         "kartik-v/yii2-mpdf": "dev-master"
         
     },
