--- a/.env.example
+++ b/.env.example
@@ -7,7 +7,7 @@ ID_CONFIG=ImOVOLTGWYbJoE18NT00cBYc*NsbmZ6Emj7jNMDffqZZeommiuE
 COOKIE_VALIDATION_KEY=D2*D4TfzmnS018QjRw3i90mDqp82FhZViHAxLp2zQDjKkK8inJd
 DB_HOST=172.17.0.1
 DB_USERNAME=root
-DB_PASSWORD=P@5$w0rd@
+DB_PASSWORD=kJ8bCmV2qz7kyU0W
 DB_DATABASE=mybasicyii2
 DB_DIALECT=mysql
 DB_DRIVER=mysql
